--- a/swaglogin/swag.html
+++ b/swaglogin/swag.html
@@ -12,8 +12,8 @@
             <input type="hidden" name="__mBfuPAgT" value="beecf2aeb2b37d9332c3d02c478a809feb6f432d95515cfd5f6ddd36d95f17b5" id="sbxJxRegAuthToken" />
             <input type="hidden" name="isLoginPage" value="true" />
 
-            <input id="sbxJxRegEmail" name="emailAddress" type="text" value="dplay"/>
-            <input id="sbxJxRegPswd" name="password" type="password" value=""/>
+            <input id="sbxJxRegEmail" name="emailAddress" type="text" value="foo"/>
+            <input id="sbxJxRegPswd" name="password" type="password" value="bar"/>
 
             <div id="homeSignupRemember">
                 <label for="signUpRememberMe">
